更改目录结构。

--- a/test.ipynb
+++ b/test.ipynb
@@ -1557,26 +1557,209 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T09:14:59.510147Z",
+     "start_time": "2024-09-09T09:14:58.960654Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_excel(\"data/qwen_72B_predict.xlsx\")\n",
+    "df"
+   ],
+   "id": "8ee1e69f5da82133",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "               manual_content label                 content predict\n",
+       "0          请袁艺喊“开始上课”，声音要响亮啊。    发起      请袁艺喊‘开始上课’，声音要响亮啊。      发起\n",
+       "1                         真棒。    评价                     真棒。      评价\n",
+       "2      好，现在用眼睛看，用心记住这个字，“猴子”。    发起  好，现在用眼睛看，用心记住这个字，‘猴子’。      讲解\n",
+       "3    它分别种了什么树呢？谁来说说？于凯，你来说说看。    发起         它分别种了什么树呢？谁来说说？      发起\n",
+       "4    它分别种了什么树呢？谁来说说？于凯，你来说说看。    发起               于凯，你来说说看。      发起\n",
+       "..                        ...   ...                     ...     ...\n",
+       "213                     好，你来。    发起                   好，你来。      发起\n",
+       "214                       很好！    评价                     很好！      评价\n",
+       "215          好，再来一个同学，李春月，你来。    发起        好，再来一个同学，李春月，你来。      发起\n",
+       "216                  你说，“改革”。    发起                你说，“改革”。      评价\n",
+       "217  你说，我们学下一个字，“洗”，预备起。洗上结构。    发起     你说，我们学下一个字，“洗”，预备起。      发起\n",
+       "\n",
+       "[218 rows x 4 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>manual_content</th>\n",
+       "      <th>label</th>\n",
+       "      <th>content</th>\n",
+       "      <th>predict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>请袁艺喊“开始上课”，声音要响亮啊。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>请袁艺喊‘开始上课’，声音要响亮啊。</td>\n",
+       "      <td>发起</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>真棒。</td>\n",
+       "      <td>评价</td>\n",
+       "      <td>真棒。</td>\n",
+       "      <td>评价</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>好，现在用眼睛看，用心记住这个字，“猴子”。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>好，现在用眼睛看，用心记住这个字，‘猴子’。</td>\n",
+       "      <td>讲解</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>它分别种了什么树呢？谁来说说？于凯，你来说说看。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>它分别种了什么树呢？谁来说说？</td>\n",
+       "      <td>发起</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>它分别种了什么树呢？谁来说说？于凯，你来说说看。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>于凯，你来说说看。</td>\n",
+       "      <td>发起</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>好，你来。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>好，你来。</td>\n",
+       "      <td>发起</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>很好！</td>\n",
+       "      <td>评价</td>\n",
+       "      <td>很好！</td>\n",
+       "      <td>评价</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>好，再来一个同学，李春月，你来。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>好，再来一个同学，李春月，你来。</td>\n",
+       "      <td>发起</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>你说，“改革”。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>你说，“改革”。</td>\n",
+       "      <td>评价</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>你说，我们学下一个字，“洗”，预备起。洗上结构。</td>\n",
+       "      <td>发起</td>\n",
+       "      <td>你说，我们学下一个字，“洗”，预备起。</td>\n",
+       "      <td>发起</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>218 rows × 4 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 69
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T09:15:13.520086Z",
+     "start_time": "2024-09-09T09:15:13.515068Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def highlight_errors(row):\n",
+    "    if row['label'] == '发起' and row['predict'] != '发起':\n",
+    "        # 召回计算中的错误，标记为黄色\n",
+    "        return ['background-color: yellow'] * len(row)\n",
+    "    elif row['predict'] == '发起' and row['label'] != '发起':\n",
+    "        # 精确率计算中的错误，标记为深绿色\n",
+    "        return ['background-color: darkgreen'] * len(row)\n",
+    "    else:\n",
+    "        return [''] * len(row)\n"
+   ],
+   "id": "774fd249831bd6a0",
+   "outputs": [],
+   "execution_count": 70
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T09:15:43.839839Z",
+     "start_time": "2024-09-09T09:15:43.048866Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df2 = df.style.apply(highlight_errors, axis=1)",
+   "id": "ac2fd413fbdae990",
+   "outputs": [],
+   "execution_count": 71
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-09T09:17:15.875944Z",
+     "start_time": "2024-09-09T09:17:15.740525Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df2.to_excel(\"data/qwen_72B_predict.xlsx\", index=False)",
+   "id": "a2b119e1bc13d6cd",
+   "outputs": [],
+   "execution_count": 73
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": [
-    "[\n",
-    "  {\"type\":\"其它\", \"content\":\"乌鸦说过了，咱们不重复。你不着急吗？意思就是说你会着急的，是不是啊？意思一样啊。\"},\n",
-    "  {\"type\":\"评价\", \"content\":\"好，很好，掌声鼓励。\"},\n",
-    "  {\"type\":\"讲解\", \"content\":\"听了三只鸟儿的话，猴子可有想法了。猴子是怎么想的？听了乌鸦的话，猴子一想，你们瞧，可等不及，也等不及，还是等不及。说明这只猴子越来越没有耐心。他越来越没有耐心了，是吧？\"},\n",
-    "  {\"type\":\"发起\", \"content\":\"现在呀我们拿起书本，把这个故事啊从头到尾再来背一背。用上刚刚老师教你们的，咱们去把故事啊讲流利讲通顺，然后讲的有感情啊。\"},\n",
-    "  {\"type\":\"发起\", \"content\":\"猴子种了一棵梨树苗，预备起。\"},\n",
-    "  {\"type\":\"其它\", \"content\":\"猴子，这些东西放下，我们来看一下板书。猴子呀他一开始很勤劳啊，还是种了一棵梨树。\"},\n",
-    "  {\"type\":\"讲解\", \"content\":\"可是当乌鸦来劝说它的时候，它就拔掉了梨树，改种了。正当杏树成活的时候，喜鹊来劝他了。于是猴子又拔掉了，改种了桃树。正当桃树成活的时候，杜鹃又来劝说它了。这时候猴子又拔掉了，改种了。可是有一句农谚叫，樱桃好吃，树难栽，一连几年都没有栽活。到最后这只猴子什么树也没有成。\"},\n",
-    "  {\"type\":\"讲解\", \"content\":\"对呀，这只猴子什么树也没有种成。除了它没耐心，它还没什么？\"},\n",
-    "  {\"type\":\"评价\", \"content\":\"你说，说的真好。\"},\n",
-    "  {\"type\":\"讲解\", \"content\":\"还没有主见，别人说什么他就听什么，没有自己的想法，是不是啊？到最后什么都没有啊。\"},\n",
-    "  {\"type\":\"发起\", \"content\":\"那么这只小猴呢，也挺可怜的。你想对他说什么？\"}\n",
-    "]"
-   ],
-   "id": "8ee1e69f5da82133"
+   "source": "",
+   "id": "1f55a8f0ab374ecf"
   }
  ],
  "metadata": {
