在数据处理代码，新增teacher_dialogue_classification"任务的处理逻辑，并且也做了处理class_activity_classification"任务的扩展。这个class_activity_classification"任务会在之后补充好处理逻辑。

--- a/evaluate_test.ipynb
+++ b/evaluate_test.ipynb
@@ -1209,12 +1209,248 @@
    "execution_count": 21
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T03:58:27.178522Z",
+     "start_time": "2024-09-11T03:58:27.161511Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "data = {\n",
+    "        'start_time': [27300, 35310, 40560, 45590, 47910, 50070, 54340, 67170],\n",
+    "        'end_time': [32940, 39510, 42710, 47190, 49590, 52760, 64670, 69880],\n",
+    "        'text': [\n",
+    "            \"具你，为什么要我买？这是第一套。\",\n",
+    "            \"喂，你，吃你吃你狗，你，\",\n",
+    "            \"好，把语文书翻到第50页，\",\n",
+    "            \"然后铅笔收起来把，\",\n",
+    "            \"课堂练习放到左上角，\",\n",
+    "            \"先把语文书翻到翻到第50页，翻到这里，\",\n",
+    "            \"没有，50。我现在这个阳猫世，\",\n",
+    "            \"我看谁今天的坐姿有问题啊啊，\"\n",
+    "        ],\n",
+    "        'label': [1, 1, 1, 0, 0, 0, 1 ,0]  # Labels include student dialogue before teacher\n",
+    "    }"
+   ],
+   "id": "7da42991f3bb46b4",
+   "outputs": [],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T03:58:32.876921Z",
+     "start_time": "2024-09-11T03:58:32.866920Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df = pd.DataFrame(data)",
+   "id": "fb2cf390c48cc42f",
+   "outputs": [],
+   "execution_count": 38
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T03:58:33.663911Z",
+     "start_time": "2024-09-11T03:58:33.643912Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df",
+   "id": "91760954c78b8668",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   start_time  end_time                 text  label\n",
+       "0       27300     32940     具你，为什么要我买？这是第一套。      1\n",
+       "1       35310     39510         喂，你，吃你吃你狗，你，      1\n",
+       "2       40560     42710        好，把语文书翻到第50页，      1\n",
+       "3       45590     47190            然后铅笔收起来把，      0\n",
+       "4       47910     49590           课堂练习放到左上角，      0\n",
+       "5       50070     52760  先把语文书翻到翻到第50页，翻到这里，      0\n",
+       "6       54340     64670      没有，50。我现在这个阳猫世，      1\n",
+       "7       67170     69880       我看谁今天的坐姿有问题啊啊，      0"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27300</td>\n",
+       "      <td>32940</td>\n",
+       "      <td>具你，为什么要我买？这是第一套。</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35310</td>\n",
+       "      <td>39510</td>\n",
+       "      <td>喂，你，吃你吃你狗，你，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40560</td>\n",
+       "      <td>42710</td>\n",
+       "      <td>好，把语文书翻到第50页，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45590</td>\n",
+       "      <td>47190</td>\n",
+       "      <td>然后铅笔收起来把，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47910</td>\n",
+       "      <td>49590</td>\n",
+       "      <td>课堂练习放到左上角，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50070</td>\n",
+       "      <td>52760</td>\n",
+       "      <td>先把语文书翻到翻到第50页，翻到这里，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>54340</td>\n",
+       "      <td>64670</td>\n",
+       "      <td>没有，50。我现在这个阳猫世，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>67170</td>\n",
+       "      <td>69880</td>\n",
+       "      <td>我看谁今天的坐姿有问题啊啊，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 39
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-11T06:43:45.879421Z",
+     "start_time": "2024-09-11T06:43:45.860961Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Original list1 data\n",
+    "list1 = [\n",
+    "    '[{\"start_time\":45590,\"end_time\":52760,\"text\":\"然后铅笔收起来把，课堂练习放到左上角，先把语文书翻到翻到第50页，翻到这里，\",\"label\":0},{\"start_time\":45590,\"end_time\":52760,\"text\":\"\",\"label\":1},{\"start_time\":54340,\"end_time\":64670,\"text\":\"没有，50。我现在这个阳猫世，\",\"label\":1}]', \n",
+    "    '[{\"start_time\":67170,\"end_time\":69880,\"text\":\"我看谁今天的坐姿有问题啊啊，\",\"label\":0},{\"start_time\":67170,\"end_time\":69880,\"text\":\"\",\"label\":1}]'\n",
+    "]\n",
+    "\n",
+    "# Processed final list\n",
+    "final_list = []\n",
+    "\n",
+    "for item in list1:\n",
+    "    # Convert the item to JSON\n",
+    "    data = json.loads(item)\n",
+    "    \n",
+    "    # Find combined label 1 segment\n",
+    "    combined_text = \"\"\n",
+    "    start_time = None\n",
+    "    end_time = None\n",
+    "    \n",
+    "    for segment in data:\n",
+    "        if segment['label'] == 1:\n",
+    "            if start_time is None:\n",
+    "                start_time = segment['start_time']\n",
+    "            end_time = segment['end_time']\n",
+    "            combined_text += segment['text']\n",
+    "    \n",
+    "    # Replace label 1 segments with combined segment\n",
+    "    new_data = [seg for seg in data if seg['label'] == 0]  # Keep label 0 segments\n",
+    "    if combined_text:\n",
+    "        new_data.append({\n",
+    "            \"start_time\": start_time,\n",
+    "            \"end_time\": end_time,\n",
+    "            \"text\": combined_text,\n",
+    "            \"label\": 1\n",
+    "        })\n",
+    "    \n",
+    "    final_list.append(new_data)\n",
+    "\n",
+    "# Output the final list in the required format\n",
+    "final_list\n",
+    "\n"
+   ],
+   "id": "a787c1906f4629ff",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'start_time': 45590,\n",
+       "   'end_time': 52760,\n",
+       "   'text': '然后铅笔收起来把，课堂练习放到左上角，先把语文书翻到翻到第50页，翻到这里，',\n",
+       "   'label': 0},\n",
+       "  {'start_time': 45590,\n",
+       "   'end_time': 64670,\n",
+       "   'text': '没有，50。我现在这个阳猫世，',\n",
+       "   'label': 1}],\n",
+       " [{'start_time': 67170,\n",
+       "   'end_time': 69880,\n",
+       "   'text': '我看谁今天的坐姿有问题啊啊，',\n",
+       "   'label': 0}]]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 42
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "7da42991f3bb46b4"
+   "id": "ff26c32cad76b8cd"
   }
  ],
  "metadata": {
