--- a/test.ipynb
+++ b/test.ipynb
@@ -1754,12 +1754,162 @@
    "execution_count": 73
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T10:59:56.856823Z",
+     "start_time": "2024-09-12T10:59:56.835624Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "text = {\n",
+    "        \"start_time\": [27300, 35310, 40560, 45590, 47910, 50070, 52780, 53000],\n",
+    "        \"end_time\": [32940, 39510, 42710, 47190, 49590, 52760, 52790, 69880],\n",
+    "        \"text\": [\n",
+    "            \"具你，为什么要我买？这是第一套。\",\n",
+    "            \"喂，你，吃你吃你狗，你，\",\n",
+    "            \"好，把语文书翻到第50页，\",\n",
+    "            \"然后铅笔收起来把，\",\n",
+    "            \"课堂练习放到左上角，\",\n",
+    "            \"先把语文书翻到翻到第50页，翻到这里，\",\n",
+    "            \"没有，50。我现在这个阳猫世，\",\n",
+    "            \"我看谁今天的坐姿有问题啊啊，\"\n",
+    "        ],\n",
+    "        \"label\": [1, 1, 1, 0, 1, 0, 1, 0]\n",
+    "    }"
+   ],
+   "id": "1f55a8f0ab374ecf",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-12T11:01:15.434725Z",
+     "start_time": "2024-09-12T11:01:15.421702Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd \n",
+    "pd.DataFrame(text)"
+   ],
+   "id": "66e6744aa0768ed4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   start_time  end_time                 text  label\n",
+       "0       27300     32940     具你，为什么要我买？这是第一套。      1\n",
+       "1       35310     39510         喂，你，吃你吃你狗，你，      1\n",
+       "2       40560     42710        好，把语文书翻到第50页，      1\n",
+       "3       45590     47190            然后铅笔收起来把，      0\n",
+       "4       47910     49590           课堂练习放到左上角，      1\n",
+       "5       50070     52760  先把语文书翻到翻到第50页，翻到这里，      0\n",
+       "6       52780     52790      没有，50。我现在这个阳猫世，      1\n",
+       "7       53000     69880       我看谁今天的坐姿有问题啊啊，      0"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27300</td>\n",
+       "      <td>32940</td>\n",
+       "      <td>具你，为什么要我买？这是第一套。</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>35310</td>\n",
+       "      <td>39510</td>\n",
+       "      <td>喂，你，吃你吃你狗，你，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>40560</td>\n",
+       "      <td>42710</td>\n",
+       "      <td>好，把语文书翻到第50页，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>45590</td>\n",
+       "      <td>47190</td>\n",
+       "      <td>然后铅笔收起来把，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47910</td>\n",
+       "      <td>49590</td>\n",
+       "      <td>课堂练习放到左上角，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50070</td>\n",
+       "      <td>52760</td>\n",
+       "      <td>先把语文书翻到翻到第50页，翻到这里，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>52780</td>\n",
+       "      <td>52790</td>\n",
+       "      <td>没有，50。我现在这个阳猫世，</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>53000</td>\n",
+       "      <td>69880</td>\n",
+       "      <td>我看谁今天的坐姿有问题啊啊，</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "1f55a8f0ab374ecf"
+   "id": "55384742eeee91f9"
   }
  ],
  "metadata": {
