更新相关的文档。

--- a/业务代码/业务代码文档/老师四分类业务使用文档.md
+++ b/业务代码/业务代码文档/老师四分类业务使用文档.md
@@ -81,8 +81,11 @@
 }
 ```
 
-#### 配置文件参数说明
+#### 配置文件的作用和参数说明
+配置文件在脚本中起到了关键的作用，用于控制数据处理和模型调用的行为。
 
+- **作用**：配置文件用于设置数据处理和模型调用的参数，决定了脚本如何处理数据以及是否需要调用闭源模型进行分析。
+- **参数说明**
 - **`model_parameters`**（可选）：
 
   - **作用**：用于配置模型调用的相关参数。如果配置中不存在 `model_parameters`，则脚本不会调用闭源模型，只进行数据处理部分。
