提取数据 处理中的公共函数 ，将标点符号转换，去除标点符号，json提取这些功能提取出来。 添加老师四分类的api调用版本并写了相关的使用文档。
新增主题提取的数据处理代码。

--- a/test.ipynb
+++ b/test.ipynb
@@ -170,12 +170,170 @@
    "execution_count": 158
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-25T03:08:27.639252Z",
+     "start_time": "2024-09-25T03:08:27.593642Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd \n",
+    "def parse_test_result(test_result):\n",
+    "    \"\"\"解析模型返回的结果，提取 JSON\"\"\"\n",
+    "    if test_result:\n",
+    "        try:\n",
+    "            result_data = json.loads(test_result)\n",
+    "            \n",
+    "            return result_data\n",
+    "        except json.JSONDecodeError:\n",
+    "            return extract_json_using_patterns(test_result)\n",
+    "    else:\n",
+    "        return {}\n",
+    "def remove_punctuation(text):\n",
+    "    # 中英文标点符号的正则表达式\n",
+    "    punctuation_pattern = r'[，。！？、；：“”‘’（）《》【】…—]+' + r'[.,\\/#!$%\\^&\\*;:{}=\\-_`~()]'\n",
+    "    # 使用正则表达式替换标点符号为空字符串\n",
+    "    no_punctuation_text = re.sub(punctuation_pattern, '', text)\n",
+    "    return no_punctuation_text\n",
+    "\n",
+    "output_result = [[{\"start_time\": 27300, \"end_time\": 32940, \"text\": \"具你，为什么要我买？这是第一套。\", \"label\": 0}, {\"start_time\": 35310, \"end_time\": 39510, \"text\": \"喂，你，吃你吃你狗，你，\", \"label\": 1}, {\"model_input\": \"\\n                “老师话语”：具你，为什么要我买？这是第一套。 \\n                “学生话语”：喂，你，吃你吃你狗，你，\\n                \"}, {\"soikit_test_result\": \"{\\n  \\\"result\\\": [\\n    {\\\"type\\\": \\\"发起\\\", \\\"content\\\": \\\"具你，为什么要我买？这是第一套。\\\"}\\n  ],\\n  \\\"compliance\\\": \\\"低\\\"\\n}\"}], [{\"start_time\": 40560, \"end_time\": 42710, \"text\": \"好，把语文书翻到第50页，\", \"label\": 0}, {\"start_time\": 40560, \"end_time\": 42710, \"text\": \"\", \"label\": 1}, {\"model_input\": \"“老师话语”：好，把语文书翻到第50页， \"}, {\"soikit_test_result\": \"{\\n  \\\"result\\\": [\\n    {\\\"type\\\": \\\"其它\\\", \\\"content\\\": \\\"好，把语文书翻到第50页，\\\"}\\n  ],\\n  \\\"compliance\\\": \\\"无\\\"\\n}\"}], [{\"start_time\": 45590, \"end_time\": 47190, \"text\": \"然后铅笔收起来把，\", \"label\": 0}, {\"start_time\": 47910, \"end_time\": 49590, \"text\": \"课堂练习放到左上角，\", \"label\": 1}, {\"model_input\": \"\\n                “老师话语”：然后铅笔收起来把， \\n                “学生话语”：课堂练习放到左上角，\\n                \"}, {\"soikit_test_result\": \"{\\n  \\\"result\\\": [\\n    {\\\"type\\\": \\\"其它\\\", \\\"content\\\": \\\"然后铅笔收起来吧\\\"}\\n  ],\\n  \\\"compliance\\\": \\\"无\\\"\\n}\"}], [{\"start_time\": 50070, \"end_time\": 52760, \"text\": \"先把语文书翻到翻到第50页，翻到这里，\", \"label\": 0}, {\"start_time\": 52780, \"end_time\": 52790, \"text\": \"没有，50。我现在这个阳猫世，\", \"label\": 1}, {\"model_input\": \"\\n                “老师话语”：先把语文书翻到翻到第50页，翻到这里， \\n                “学生话语”：没有，50。我现在这个阳猫世，\\n                \"}, {\"soikit_test_result\": \"{\\n  \\\"result\\\": [\\n    {\\\"type\\\": \\\"其它\\\", \\\"content\\\": \\\"先把语文书翻到翻到第50页，翻到这里，\\\"}\\n  ],\\n  \\\"compliance\\\": \\\"无\\\"\\n}\"}], [{\"start_time\": 53000, \"end_time\": 69880, \"text\": \"我看谁今天坐姿有问题啊啊，\", \"label\": 0}, {\"start_time\": 53000, \"end_time\": 69880, \"text\": \"\", \"label\": 1}, {\"model_input\": \"“老师话语”：我看谁今天坐姿有问题啊啊， \"}, {\"soikit_test_result\": \"{\\n\\\"result\\\": [\\n  {\\\"type\\\":\\\"发起\\\",\\\"content\\\":\\\"我看谁今天坐姿有问题啊啊，\\\"}\\n],\\n\\\"compliance\\\": \\\"无\\\"\\n}\"}]]\n",
+    "model_name = \"soikit_test\"\n",
+    "# def process_output_result(output_result, model_name):\n",
+    "\"\"\"处理模型的输出结果，生成最终的 DataFrame\"\"\"\n",
+    "result_list = []\n",
+    "\n",
+    "for sublist in output_result:\n",
+    "    print(\"sub_list\",sublist)\n",
+    "    test_result = None\n",
+    "    if len(sublist) >= 4:\n",
+    "        third_item = sublist[3]\n",
+    "        test_result = next(iter(third_item.values()))\n",
+    "    else:\n",
+    "        test_result = None\n",
+    "    \n",
+    "    contents = parse_test_result(test_result)\n",
+    "    print(\"contents\",contents)\n",
+    "    new_sublist = []\n",
+    "    if not contents:\n",
+    "        for item in sublist:\n",
+    "            print(\"item\",item)\n",
+    "            if 'start_time' in item:\n",
+    "                new_item = item.copy()\n",
+    "                new_item[f'{model_name}_predict'] = '{}'\n",
+    "                new_sublist.append(new_item)\n",
+    "        result_list.append(new_sublist)\n",
+    "        continue\n",
+    "    for item in sublist:\n",
+    "        if 'start_time' in item:\n",
+    "            new_item = item.copy()\n",
+    "\n",
+    "            match_found = False\n",
+    "            for content in contents[\"result\"]:\n",
+    "                if content['content'] != \"\":\n",
+    "                    if remove_punctuation(content['content']) in remove_punctuation(item['text']):\n",
+    "                        new_item[f'{model_name}_predict'] = test_result\n",
+    "                        match_found = True\n",
+    "                        break\n",
+    "            if not match_found:\n",
+    "                new_item[f'{model_name}_predict'] = ''\n",
+    "\n",
+    "            new_sublist.append(new_item)\n",
+    "    result_list.append(new_sublist)\n",
+    "    # return df_result"
+   ],
+   "id": "ffd1dbed4c5b65d5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_list [{'start_time': 27300, 'end_time': 32940, 'text': '具你，为什么要我买？这是第一套。', 'label': 0}, {'start_time': 35310, 'end_time': 39510, 'text': '喂，你，吃你吃你狗，你，', 'label': 1}, {'model_input': '\\n                “老师话语”：具你，为什么要我买？这是第一套。 \\n                “学生话语”：喂，你，吃你吃你狗，你，\\n                '}, {'soikit_test_result': '{\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\": \"具你，为什么要我买？这是第一套。\"}\\n  ],\\n  \"compliance\": \"低\"\\n}'}]\n",
+      "contents {'result': [{'type': '发起', 'content': '具你，为什么要我买？这是第一套。'}], 'compliance': '低'}\n",
+      "sub_list [{'start_time': 40560, 'end_time': 42710, 'text': '好，把语文书翻到第50页，', 'label': 0}, {'start_time': 40560, 'end_time': 42710, 'text': '', 'label': 1}, {'model_input': '“老师话语”：好，把语文书翻到第50页， '}, {'soikit_test_result': '{\\n  \"result\": [\\n    {\"type\": \"其它\", \"content\": \"好，把语文书翻到第50页，\"}\\n  ],\\n  \"compliance\": \"无\"\\n}'}]\n",
+      "contents {'result': [{'type': '其它', 'content': '好，把语文书翻到第50页，'}], 'compliance': '无'}\n",
+      "sub_list [{'start_time': 45590, 'end_time': 47190, 'text': '然后铅笔收起来把，', 'label': 0}, {'start_time': 47910, 'end_time': 49590, 'text': '课堂练习放到左上角，', 'label': 1}, {'model_input': '\\n                “老师话语”：然后铅笔收起来把， \\n                “学生话语”：课堂练习放到左上角，\\n                '}, {'soikit_test_result': '{\\n  \"result\": [\\n    {\"type\": \"其它\", \"content\": \"然后铅笔收起来吧\"}\\n  ],\\n  \"compliance\": \"无\"\\n}'}]\n",
+      "contents {'result': [{'type': '其它', 'content': '然后铅笔收起来吧'}], 'compliance': '无'}\n",
+      "sub_list [{'start_time': 50070, 'end_time': 52760, 'text': '先把语文书翻到翻到第50页，翻到这里，', 'label': 0}, {'start_time': 52780, 'end_time': 52790, 'text': '没有，50。我现在这个阳猫世，', 'label': 1}, {'model_input': '\\n                “老师话语”：先把语文书翻到翻到第50页，翻到这里， \\n                “学生话语”：没有，50。我现在这个阳猫世，\\n                '}, {'soikit_test_result': '{\\n  \"result\": [\\n    {\"type\": \"其它\", \"content\": \"先把语文书翻到翻到第50页，翻到这里，\"}\\n  ],\\n  \"compliance\": \"无\"\\n}'}]\n",
+      "contents {'result': [{'type': '其它', 'content': '先把语文书翻到翻到第50页，翻到这里，'}], 'compliance': '无'}\n",
+      "sub_list [{'start_time': 53000, 'end_time': 69880, 'text': '我看谁今天坐姿有问题啊啊，', 'label': 0}, {'start_time': 53000, 'end_time': 69880, 'text': '', 'label': 1}, {'model_input': '“老师话语”：我看谁今天坐姿有问题啊啊， '}, {'soikit_test_result': '{\\n\"result\": [\\n  {\"type\":\"发起\",\"content\":\"我看谁今天坐姿有问题啊啊，\"}\\n],\\n\"compliance\": \"无\"\\n}'}]\n",
+      "contents {'result': [{'type': '发起', 'content': '我看谁今天坐姿有问题啊啊，'}], 'compliance': '无'}\n"
+     ]
+    }
+   ],
+   "execution_count": 176
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-25T02:38:27.030503Z",
+     "start_time": "2024-09-25T02:38:27.016825Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sub_list  = [{'start_time': 27300, 'end_time': 32940, 'text': '具你，为什么要我买？这是第一套。', 'label': 0}, {'start_time': 35310, 'end_time': 39510, 'text': '喂，你，吃你吃你狗，你，', 'label': 1}, {'model_input': '\\n                “老师话语”：具你，为什么要我买？这是第一套。 \\n                “学生话语”：喂，你，吃你吃你狗，你，\\n                '}, {'soikit_test_result': '{\\n  \"result\": [\\n    {\"type\": \"发起\", \"content\": \"具你，为什么要我买？这是第一套。\"}\\n  ],\\n  \"compliance\": \"低\"\\n}'}]\n",
+    "sub_list[0]"
+   ],
+   "id": "eb8a9bdd0a3173e2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'start_time': 27300,\n",
+       " 'end_time': 32940,\n",
+       " 'text': '具你，为什么要我买？这是第一套。',\n",
+       " 'label': 0}"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 174
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "ffd1dbed4c5b65d5"
+   "source": [
+    "if \"start_time\" in sub_list[0]:\n",
+    "    print(1)"
+   ],
+   "id": "d9cd0f0aaaeced08"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "    \n",
+    "\n",
+    "\n",
+    "    for item in sublist:\n",
+    "        if 'start_time' in item:\n",
+    "            new_item = item.copy()\n",
+    "\n",
+    "            match_found = False\n",
+    "            for content in contents[\"result\"]:\n",
+    "                if content['content'] != \"\":\n",
+    "                    if content['content'] in item['text']:\n",
+    "                        new_item[f'{model_name}_predict'] = test_result\n",
+    "                        match_found = True\n",
+    "                        break\n",
+    "            if not match_found:\n",
+    "                new_item[f'{model_name}_predict'] = ''\n",
+    "\n",
+    "            new_sublist.append(new_item)\n",
+    "    result_list.append(new_sublist)\n",
+    "\n",
+    "flat_list = [item for sublist in result_list for item in sublist]\n",
+    "df_result = pd.DataFrame(flat_list)"
+   ],
+   "id": "1e64492ff120da3a"
   }
  ],
  "metadata": {
