--- a/data_processor/文档/老师四分类业务的详细实现.md
+++ b/data_processor/文档/老师四分类业务的详细实现.md
@@ -2,7 +2,7 @@
 
 ## 项目简介
 
-`TeacherDialogueClassificationProcessor` 是一个用于处理课堂音频转译文本的工具。其主要任务是将课堂上老师和学生的对话片段自动分割并整理成独立的师生对话文本段。这个工具可以应用于课堂互动分析以及其他教育相关的自然语言处理任务。
+`TeacherDialogueClassificationProcessor` 是一个用于处理课堂音频转译文本的工具。其主要任务是将课堂上老师和学生的对话片段自动分割并整理成独立的师生对话文本段。
 
 ## 功能说明
 
@@ -18,19 +18,19 @@
 
 - `__init__(self, dataset, T)`  
   初始化处理器，接收一个包含转译文本的数据集和时间差阈值 `T`。
-  
+
 - `discard_student_before_first_teacher(self)`  
   去除第一个老师发言之前的所有学生发言记录。
-  
+
 - `split_dataset(self)`  
   根据时间差和发言者标签，分割数据集为独立的师生对话段。
-  
+
 - `convert_punctuation_to_chinese(self, text)`  
   将文本中的英文标点符号转换为中文标点符号。
-  
+
 - `merge_text_by_label(self, sub_df)`  
   合并相同标签的文本，并处理特殊情况。
-  
+
 - `process(self)`  
   处理数据集，生成独立的师生对话段文本。
 
@@ -59,8 +59,6 @@ for segment in dialogue_segments:
 - 数据集中必须包含至少一个标签为老师（`label == 0`）的记录，否则程序会抛出异常。
 - 时间差阈值 `T` 的设置需根据实际应用场景调整，以确保合理的对话段划分。
 
-
-
 # 特别对数据分割（split_dataset）函数说明
 
 ## 功能概述
@@ -73,32 +71,32 @@ for segment in dialogue_segments:
 
 1. **学生话语（label == 1）**：当遍历到学生话语时，不会立即触发分割，继续向下处理，直到遇到教师话语或满足分割条件。
 2. **教师话语（label == 0）**：遇到教师话语时，会根据一定条件触发分割。
-   - **时间间隔条件**：如果两个相邻教师话语的时间间隔超过设定的阈值（`T`，例如400秒），即使中间没有学生话语，仍然会触发分割。
-   - **学生话语条件**：如果从上一次教师话语到当前教师话语之间出现了学生话语，则触发分割。
+    - **时间间隔条件**：如果两个相邻教师话语的时间间隔超过设定的阈值（`T`，例如400秒），即使中间没有学生话语，仍然会触发分割。
+    - **学生话语条件**：如果从上一次教师话语到当前教师话语之间出现了学生话语，则触发分割。
 
 ### 处理步骤：
 
 1. **初始化**：
-   - 在遍历数据集之前，初始化以下变量：
-     - `last_teacher_end_time`：保存上一个教师话语的结束时间。
-     - `current_start`：保存当前子数据集的起始位置（索引）。
-     - `sub_datasets`：保存分割后得到的多个子数据集。
+    - 在遍历数据集之前，初始化以下变量：
+        - `last_teacher_end_time`：保存上一个教师话语的结束时间。
+        - `current_start`：保存当前子数据集的起始位置（索引）。
+        - `sub_datasets`：保存分割后得到的多个子数据集。
 
 2. **遍历数据集**：
-   - 从索引1开始遍历每条记录，并检查其 `label` 值：
-     - 如果遇到学生话语（`label == 1`），跳过分割，继续往下检查。
-     - 如果遇到教师话语（`label == 0`），执行以下操作：
-       - **计算时间间隔**：计算当前教师话语的 `start_time` 与上一个教师话语的 `end_time` 之间的时间差。
-       - **分割条件**：
-         - 如果时间间隔大于设定的阈值 `T`，触发分割。
-         - 如果从上一个分割点到当前教师话语之间出现了学生话语，也触发分割。
-       - **执行分割**：
-         - 将从 `current_start` 到当前教师话语之前的所有记录作为一个子数据集，并存储到 `sub_datasets` 列表中。
-         - 更新 `current_start` 为当前教师话语的索引。
-         - 更新 `last_teacher_end_time` 为当前教师话语的 `end_time`。
+    - 从索引1开始遍历每条记录，并检查其 `label` 值：
+        - 如果遇到学生话语（`label == 1`），跳过分割，继续往下检查。
+        - 如果遇到教师话语（`label == 0`），执行以下操作：
+            - **计算时间间隔**：计算当前教师话语的 `start_time` 与上一个教师话语的 `end_time` 之间的时间差。
+            - **分割条件**：
+                - 如果时间间隔大于设定的阈值 `T`，触发分割。
+                - 如果从上一个分割点到当前教师话语之间出现了学生话语，也触发分割。
+            - **执行分割**：
+                - 将从 `current_start` 到当前教师话语之前的所有记录作为一个子数据集，并存储到 `sub_datasets` 列表中。
+                - 更新 `current_start` 为当前教师话语的索引。
+                - 更新 `last_teacher_end_time` 为当前教师话语的 `end_time`。
 
 3. **特殊情况**：
-   - 在遍历结束后，如果还有未分割的数据，需要将剩余部分作为最后一个子数据集存储。
+    - 在遍历结束后，如果还有未分割的数据，需要将剩余部分作为最后一个子数据集存储。
 
 ### 分割示例：
 
@@ -127,23 +125,23 @@ def split_dataset(df, T):
     last_teacher_end_time = df.iloc[0]['end_time']  # 初始化上一个教师话语的结束时间
     current_start = 0  # 当前子数据集的起始索引
     sub_datasets = []  # 存储分割后的子数据集
-    
+
     for i in range(1, len(df)):
         if df.iloc[i]['label'] == 0:  # 如果当前行是教师话语
             time_interval = df.iloc[i]['start_time'] - last_teacher_end_time  # 计算时间间隔
-            
+
             # 检查是否满足分割条件
             if time_interval > T or any(df.iloc[j]['label'] == 1 for j in range(current_start, i)):
                 sub_datasets.append(df.iloc[current_start:i])  # 分割并存储子数据集
                 current_start = i  # 更新起始点
-            
+
             # 更新教师话语的结束时间
             last_teacher_end_time = df.iloc[i]['end_time']
-    
+
     # 如果最后还有未处理的数据，存储最后一个子数据集
     if current_start < len(df):
         sub_datasets.append(df.iloc[current_start:])
-    
+
     return sub_datasets
 ```
 
@@ -154,5 +152,9 @@ def split_dataset(df, T):
 
 ## 返回值
 
-函数返回一个包含多个子数据集的列表，每个子数据集包含分割后的连续对话。
-
+    函数返回一个包含多个子数据集的列表，每个子数据集包含分割后的连续对话。
+    [
+    [{'start_time': 27300, 'end_time': 32940, 'text': '具你，为什么要我买？这是第一套。', 'label': 0}, {'start_time': 35310, 'end_time': 39510, 'text': '喂，你，吃你吃你狗，你，', 'label': 1}], 
+    [{'start_time': 40560, 'end_time': 42710, 'text': '好，把语文书翻到第50页，', 'label': 0}, {'start_time': 40560, 'end_time': 42710, 'text': '', 'label': 1}
+    .....(接下来的师生对)
+    ]
