--- a/test.ipynb
+++ b/test.ipynb
@@ -1248,8 +1248,253 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": "{'model_parameters': {'model_family': 'gpt4o', 'api_key': 'b2e709bdd54f4416a734b4a6f8f1c7a0', 'model_name': 'soikit_test', 'api_version': '2024-02-01', 'prompt': '下面的“待分析文本”是一段发生在课堂上的师生对话片段。在这段对话中，“发起”是老师引导学生用话语回应的语句；“回应”是学生对老师“发起”的回应语句；“讲解”是老师对学生回应的总结，或为下一次“发起”提供背景和引导的语句。该对话片段中回应[空白]是没有采集到学生声音或者没有学生回答。\\n请你按照以下方法对“待分析文本”进行分析：\\n\\n根据上下文语义的相关性，请你判断“待分析文本”中相邻“发起”之间”讲解“的归属， 如果“讲解”是对上一个学生“回应”的总结，不进行任何输出。 如果“讲解”是为下一个“发起”提供背景和引导，特别是“讲解”中提到的内容与下一个“发起”相关，可以帮助更好的理解下一个“发起”，则输出这句讲解，格式为JSON格式：{\"breakpoint\":[\"讲解:文本内容1\"]}。如果“待分析文本”中有多个“讲解”为下一个“发起”提供背景和引导，请输出一个包含所有‘讲解’的列表，格式为 {\"breakpoint\": [\"讲解:文本内容1\", \"讲解:文本内容2\", ...]}。\\n待分析文本：', 'text': '讲解：瞧那么一句话，就能把故事的意思讲出来了，\\n发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]\\n发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n讲解：每天对呀，就说明这个猴子怎么样\\n讲解：他每天都去浇，天天都去浇水，施肥\\n发起：说明他怎么样\\n回应：勤劳淡实，\\n讲解：英语非常勤劳，\\n讲解：猴子是不是很好，\\n发起：你们看，\\n回应：[空白]\\n讲解：这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，'}, 'data_processor': {'Task': 'dialogue_processing', 'T': 500}, 'data': [{'start_time': 234250, 'end_time': 244470, 'text': '瞧那么一句话，就能把故事的意思讲出来了，小朋友们真能干，好，那我们来看看哦，他为什么什么树都没种成呢？', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '瞧那么一句话，就能把故事的意思讲出来了，'}, {'type': '评价', 'content': '小朋友们真能干，'}, {'type': '发起', 'content': '好，那我们来看看哦，他为什么什么树都没种成呢？'}], 'compliance': '无'}}, {'start_time': 234250, 'end_time': 244470, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 250810, 'end_time': 253750, 'text': '我们来读课文的第一段，来，谁来读？', 'label': 0, 'gpt4o_result': {'result': [{'type': '发起', 'content': '我们来读课文的第一段，来，谁来读？'}], 'compliance': '无'}}, {'start_time': 250810, 'end_time': 253750, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 258080, 'end_time': 260900, 'text': '等一下啊，张老师困扰了。嗯，好，你来读', 'label': 0, 'gpt4o_result': {'result': [{'type': '其它', 'content': '等一下啊，张老师困扰了。'}, {'type': '发起', 'content': '嗯，好，你来读'}], 'compliance': '高'}}, {'start_time': 261380, 'end_time': 270450, 'text': '猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，', 'label': 1, 'gpt4o_result': None}, {'start_time': 270470, 'end_time': 273170, 'text': '你不要坐下，是不天天说明什么呀？', 'label': 0, 'gpt4o_result': {'result': [{'type': '发起', 'content': '你不要坐下，是不天天说明什么呀？'}], 'compliance': '高'}}, {'start_time': 273660, 'end_time': 275280, 'text': '就是每天', 'label': 1, 'gpt4o_result': None}, {'start_time': 275480, 'end_time': 278210, 'text': '哎每天对呀，就说明这个猴子怎么样', 'label': 0, 'gpt4o_result': {'result': [{'type': '其它', 'content': '哎'}, {'type': '讲解', 'content': '每天对呀，就说明这个猴子怎么样'}], 'compliance': '无'}}, {'start_time': 278850, 'end_time': 279650, 'text': '很细心，', 'label': 1, 'gpt4o_result': None}, {'start_time': 280310, 'end_time': 286520, 'text': '很细心，还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样', 'label': 0, 'gpt4o_result': {'result': [{'type': '评价', 'content': '很细心，'}, {'type': '讲解', 'content': '他每天都去浇，天天都去浇水，施肥'}, {'type': '发起', 'content': '说明他怎么样'}], 'compliance': '中'}}, {'start_time': 286960, 'end_time': 288220, 'text': '勤劳淡实，', 'label': 1, 'gpt4o_result': None}, {'start_time': 288810, 'end_time': 291850, 'text': '英语非常勤劳，猴子是不是很好，你们看，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '英语非常勤劳，'}, {'type': '讲解', 'content': '猴子是不是很好，'}, {'type': '发起', 'content': '你们看，'}], 'compliance': '无'}}, {'start_time': 288810, 'end_time': 291850, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 292830, 'end_time': 300270, 'text': '这个猴子种树啊，它有一个动作的过程，你找到了动作的吗？它有哪些动作？好，那就好了，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '这个猴子种树啊，它有一个动作的过程，'}, {'type': '发起', 'content': '你找到了动作的吗？它有哪些动作？'}, {'type': '评价', 'content': '好，那就好了，'}], 'compliance': '中'}}, {'start_time': 303240, 'end_time': 303880, 'text': '浇水', 'label': 1, 'gpt4o_result': None}, {'start_time': 304160, 'end_time': 305640, 'text': '天气就直接浇水了吗？', 'label': 0, 'gpt4o_result': {'result': [{'type': '发起', 'content': '天气就直接浇水了吗？'}], 'compliance': '无'}}, {'start_time': 304160, 'end_time': 305640, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 307170, 'end_time': 309070, 'text': '所以先说重好的，然后呢，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '所以先说重好的，'}, {'type': '发起', 'content': '然后呢，'}], 'compliance': '低'}}, {'start_time': 309490, 'end_time': 310190, 'text': '胶水', 'label': 1, 'gpt4o_result': None}, {'start_time': 310540, 'end_time': 313990, 'text': '嗯浇，嗯，施肥，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '嗯浇，嗯，施肥，'}], 'compliance': '无'}}, {'start_time': 310540, 'end_time': 313990, 'text': '', 'label': 1, 'gpt4o_result': None}]}\n",
    "id": "28e7ad322c2faee"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T03:06:48.710723Z",
+     "start_time": "2024-10-09T03:06:48.687137Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "task3_params = {'model_parameters': {'model_family': 'gpt4o', 'api_key': 'b2e709bdd54f4416a734b4a6f8f1c7a0', 'model_name': 'soikit_test', 'api_version': '2024-02-01', 'prompt': '下面的“待分析文本”是由若干个发生在课堂上的师生对话片段序列组成，其中有四类片段序列：”发起-回应-讲解“、“讲解-发起-回应”、“发起-回应”、“讲解-发起-回应-讲解”，其中回应[空白]是没有采集到学生声音或者没有学生回答。请你按照下面的分析方法对“待分析文本”进行分析：\\n\\n首先，将“待分析文本”按照是否是对同一问题的讨论，或老师发起的目标是否旨在引导学\\t生理解同一个知识点，分割成多个子文本段，并只输出师生对话的序列号。\\n然后，提取每一个子文本段的主题，用一句话简单总结老师如何引导学生思考、理解新知识。\\n最后，结合子文本段提取的主题，用一句话概括“待分析文本”的核心主题，其中包括教学知识点以及教学目的。\\n请将输出的内容以JSON格式呈现，格式如下：\\n{\"split\":\\n{\"sub1\": {\"d_number\": [对话序号列表1],\"sub_theme\": \"子文本段主题1\"},\\n\"sub2\": {\"d_number\": [对话序号列表2],\"sub_theme\": \"子文本段主题2\"}},\\n\"theme\": {\"theme\":\"整个文本的主题“}\\n}\\n待分析文本：\\n', 'text': '师生对话1\\n发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]\\n\\n师生对话2\\n发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n\\n师生对话3\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n\\n师生对话4\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n\\n师生对话5\\n发起：就说明这个猴子怎么样\\n回应：很细心，\\n\\n师生对话6\\n讲解：还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样,英语非常勤劳，,这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n\\n师生对话7\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n\\n师生对话8\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，'}, 'data_processor': {'Task': 'dialogue_processing', 'T': 800}, 'data': [{'start_time': 234250, 'end_time': 244470, 'text': '瞧那么一句话，就能把故事的意思讲出来了，小朋友们真能干，好，那我们来看看哦，他为什么什么树都没种成呢？', 'label': 0, 'gpt4o_result': {'result': [{'type': '评价', 'content': '瞧那么一句话，就能把故事的意思讲出来了，小朋友们真能干，'}, {'type': '发起', 'content': '好，那我们来看看哦，他为什么什么树都没种成呢？'}], 'compliance': '无'}}, {'start_time': 234250, 'end_time': 244470, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 250810, 'end_time': 253750, 'text': '我们来读课文的第一段，来，谁来读？', 'label': 0, 'gpt4o_result': {'result': [{'type': '发起', 'content': '我们来读课文的第一段，来，谁来读？'}], 'compliance': '无'}}, {'start_time': 250810, 'end_time': 253750, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 258080, 'end_time': 260900, 'text': '等一下啊，张老师困扰了。嗯，好，你来读', 'label': 0, 'gpt4o_result': {'result': [{'type': '其它', 'content': '等一下啊，张老师困扰了。'}, {'type': '发起', 'content': '嗯，好，你来读'}], 'compliance': '高'}}, {'start_time': 261380, 'end_time': 270450, 'text': '猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，', 'label': 1, 'gpt4o_result': None}, {'start_time': 270470, 'end_time': 273170, 'text': '你不要坐下，是不天天说明什么呀？', 'label': 0, 'gpt4o_result': {'result': [{'type': '发起', 'content': '你不要坐下，是不天天说明什么呀？'}], 'compliance': '中'}}, {'start_time': 273660, 'end_time': 275280, 'text': '就是每天', 'label': 1, 'gpt4o_result': None}, {'start_time': 275480, 'end_time': 278210, 'text': '哎每天对呀，就说明这个猴子怎么样', 'label': 0, 'gpt4o_result': {'result': [{'type': '其它', 'content': '哎每天对呀，'}, {'type': '发起', 'content': '就说明这个猴子怎么样'}], 'compliance': '中'}}, {'start_time': 278850, 'end_time': 279650, 'text': '很细心，', 'label': 1, 'gpt4o_result': None}, {'start_time': 280310, 'end_time': 286520, 'text': '很细心，还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样', 'label': 0, 'gpt4o_result': {'result': [{'type': '评价', 'content': '很细心，'}, {'type': '讲解', 'content': '还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样'}], 'compliance': '无'}}, {'start_time': 286960, 'end_time': 288220, 'text': '勤劳淡实，', 'label': 1, 'gpt4o_result': None}, {'start_time': 288810, 'end_time': 291850, 'text': '英语非常勤劳，猴子是不是很好，你们看，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '英语非常勤劳，'}, {'type': '评价', 'content': '猴子是不是很好，'}, {'type': '其它', 'content': '你们看，'}], 'compliance': '无'}}, {'start_time': 288810, 'end_time': 291850, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 292830, 'end_time': 300270, 'text': '这个猴子种树啊，它有一个动作的过程，你找到了动作的吗？它有哪些动作？好，那就好了，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '这个猴子种树啊，它有一个动作的过程，'}, {'type': '发起', 'content': '你找到了动作的吗？'}, {'type': '发起', 'content': '它有哪些动作？'}, {'type': '评价', 'content': '好，那就好了，'}], 'compliance': '中'}}, {'start_time': 303240, 'end_time': 303880, 'text': '浇水', 'label': 1, 'gpt4o_result': None}, {'start_time': 304160, 'end_time': 305640, 'text': '天气就直接浇水了吗？', 'label': 0, 'gpt4o_result': {'result': [{'type': '发起', 'content': '天气就直接浇水了吗？'}], 'compliance': '无'}}, {'start_time': 304160, 'end_time': 305640, 'text': '', 'label': 1, 'gpt4o_result': None}, {'start_time': 307170, 'end_time': 309070, 'text': '所以先说重好的，然后呢，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '所以先说重好的，'}, {'type': '发起', 'content': '然后呢，'}], 'compliance': '无'}}, {'start_time': 309490, 'end_time': 310190, 'text': '胶水', 'label': 1, 'gpt4o_result': None}, {'start_time': 310540, 'end_time': 313990, 'text': '嗯浇，嗯，施肥，', 'label': 0, 'gpt4o_result': {'result': [{'type': '讲解', 'content': '嗯浇，嗯，施肥，'}], 'compliance': '无'}}, {'start_time': 310540, 'end_time': 313990, 'text': '', 'label': 1, 'gpt4o_result': None}]}\n",
+   "id": "b28796ead0e16243",
+   "outputs": [],
+   "execution_count": 305
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T03:06:49.102934Z",
+     "start_time": "2024-10-09T03:06:49.094871Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "text = task3_params.get(\"model_parameters\").get(\"text\")",
+   "id": "37cf3b373110563d",
+   "outputs": [],
+   "execution_count": 306
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T03:06:49.555218Z",
+     "start_time": "2024-10-09T03:06:49.536392Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "text",
+   "id": "5196928af5b9a478",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'师生对话1\\n发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]\\n\\n师生对话2\\n发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n\\n师生对话3\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n\\n师生对话4\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n\\n师生对话5\\n发起：就说明这个猴子怎么样\\n回应：很细心，\\n\\n师生对话6\\n讲解：还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样,英语非常勤劳，,这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n\\n师生对话7\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n\\n师生对话8\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，'"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 307
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T03:06:55.997925Z",
+     "start_time": "2024-10-09T03:06:55.988909Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "text.split('师生对话')[1:]",
+   "id": "5057d0233f6c2e0d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1\\n发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]\\n\\n',\n",
+       " '2\\n发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n\\n',\n",
+       " '3\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n\\n',\n",
+       " '4\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n\\n',\n",
+       " '5\\n发起：就说明这个猴子怎么样\\n回应：很细心，\\n\\n',\n",
+       " '6\\n讲解：还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样,英语非常勤劳，,这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n\\n',\n",
+       " '7\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n\\n',\n",
+       " '8\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，']"
+      ]
+     },
+     "execution_count": 309,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 309
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "{\n",
+    "  \"split\": {\n",
+    "    \"sub1\": {\n",
+    "      \"d_number\": [1],\n",
+    "      \"sub_theme\": \"引导学生思考猴子为什么什么树都没种成。\"\n",
+    "    },\n",
+    "    \"sub2\": {\n",
+    "      \"d_number\": [2, 3, 4, 5],\n",
+    "      \"sub_theme\": \"通过朗读课文和提问，引导学生理解猴子的细心和勤劳。\"\n",
+    "    },\n",
+    "    \"sub3\": {\n",
+    "      \"d_number\": [6, 7, 8],\n",
+    "      \"sub_theme\": \"通过讲解和提问，帮助学生理解猴子种树的动作过程。\"\n",
+    "    }\n",
+    "  },\n",
+    "  \"theme\": {\n",
+    "    \"theme\": \"通过对课文的朗读和提问，老师引导学生理解猴子的细心和勤劳，并帮助学生掌握猴子种树的具体动作过程，旨在培养学生的阅读理解能力和细节观察能力。\"\n",
+    "  }\n",
+    "}"
+   ],
+   "id": "aabc7dfc4504aa0"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T09:15:09.189453Z",
+     "start_time": "2024-10-09T09:15:09.176756Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def merge_texts_into_dict(list1, dict1):\n",
+    "    \"\"\"\n",
+    "    根据 任务3：主题提取输出中的 d_number，与任务3的输入中对应的文本合并，并添加到 任务3 输出 中 的每个子主题的 sub_text 键中。\n",
+    "\n",
+    "    参数：\n",
+    "        prompt3_input(list): 包含编号和文本内容的列表。\n",
+    "        prompt3_output(dict): 包含主题和子主题信息的字典。\n",
+    "\n",
+    "    返回：\n",
+    "        dict: 更新后的 prompt3_output，添加了每个子主题的 sub_text。\n",
+    "    \"\"\"\n",
+    "    # 创建一个字典，将 d_number 映射到对应的文本内容\n",
+    "    d_number_to_text = {}\n",
+    "    \n",
+    "    for item in list1:\n",
+    "        # 分割编号和文本内容\n",
+    "        parts = item.strip().split('\\n', 1)\n",
+    "        if len(parts) == 2:\n",
+    "            try:\n",
+    "                number = int(parts[0])\n",
+    "                text = parts[1].strip()\n",
+    "                d_number_to_text[number] = text\n",
+    "            except ValueError:\n",
+    "                continue  # 如果编号不是整数，跳过该项\n",
+    "    \n",
+    "    # 根据 dict1 中的 d_number，将对应的文本合并并添加到 sub_text 键中\n",
+    "    for sub in dict1['split'].values():\n",
+    "        d_numbers = sub.get('d_number', [])\n",
+    "        merged_texts = []\n",
+    "        for num in d_numbers:\n",
+    "            text = d_number_to_text.get(num)\n",
+    "            if text:\n",
+    "                merged_texts.append(text)\n",
+    "        sub['sub_text'] = '\\n\\n'.join(merged_texts)\n",
+    "    \n",
+    "    return dict1\n",
+    "\n",
+    "# 使用示例\n",
+    "list1 = [\n",
+    "    '1\\n发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]\\n\\n',\n",
+    "    '2\\n发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n\\n',\n",
+    "    '3\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n\\n',\n",
+    "    '4\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n\\n',\n",
+    "    '5\\n发起：就说明这个猴子怎么样\\n回应：很细心，\\n\\n',\n",
+    "    '6\\n讲解：还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样,英语非常勤劳，,这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n\\n',\n",
+    "    '7\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n\\n',\n",
+    "    '8\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，'\n",
+    "]\n",
+    "\n",
+    "dict1 = {\n",
+    "    \"split\": {\n",
+    "        \"sub1\": {\n",
+    "            \"d_number\": [1],\n",
+    "            \"sub_theme\": \"引导学生思考猴子为什么什么树都没种成。\"\n",
+    "        },\n",
+    "        \"sub2\": {\n",
+    "            \"d_number\": [2, 3, 4, 5],\n",
+    "            \"sub_theme\": \"通过朗读课文和提问，引导学生理解猴子的细心和勤劳。\"\n",
+    "        },\n",
+    "        \"sub3\": {\n",
+    "            \"d_number\": [6, 7, 8],\n",
+    "            \"sub_theme\": \"通过讲解和提问，帮助学生理解猴子种树的动作过程。\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"theme\": {\n",
+    "        \"theme\": \"通过对课文的朗读和提问，老师引导学生理解猴子的细心和勤劳，并帮助学生掌握猴子种树的具体动作过程，旨在培养学生的阅读理解能力和细节观察能力。\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# 调用函数并输出结果\n",
+    "updated_dict1 = merge_texts_into_dict(list1, dict1)\n",
+    "print(updated_dict1)\n",
+    "\n"
+   ],
+   "id": "f87e4b09151d6b7",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'split': {'sub1': {'d_number': [1], 'sub_theme': '引导学生思考猴子为什么什么树都没种成。', 'sub_text': '发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]'}, 'sub2': {'d_number': [2, 3, 4, 5], 'sub_theme': '通过朗读课文和提问，引导学生理解猴子的细心和勤劳。', 'sub_text': '发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n\\n发起：就说明这个猴子怎么样\\n回应：很细心，'}, 'sub3': {'d_number': [6, 7, 8], 'sub_theme': '通过讲解和提问，帮助学生理解猴子种树的动作过程。', 'sub_text': '讲解：还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样,英语非常勤劳，,这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，'}}, 'theme': {'theme': '通过对课文的朗读和提问，老师引导学生理解猴子的细心和勤劳，并帮助学生掌握猴子种树的具体动作过程，旨在培养学生的阅读理解能力和细节观察能力。'}}\n"
+     ]
+    }
+   ],
+   "execution_count": 311
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-09T02:57:54.896924Z",
+     "start_time": "2024-10-09T02:57:54.879076Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "updated_dict1",
+   "id": "319b8d2493e46b1",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'split': {'sub1': {'d_number': [1],\n",
+       "   'sub_theme': '引导学生思考猴子为什么什么树都没种成。',\n",
+       "   'sub_text': '发起：好，那我们来看看哦，他为什么什么树都没种成呢？\\n回应：[空白]'},\n",
+       "  'sub2': {'d_number': [2, 3, 4, 5],\n",
+       "   'sub_theme': '通过朗读课文和提问，引导学生理解猴子的细心和勤劳。',\n",
+       "   'sub_text': '发起：我们来读课文的第一段，来，谁来读？\\n回应：[空白]\\n\\n发起：嗯，好，你来读\\n回应：猴子，种了一棵梨树苗天，天浇水施肥等着将来吃梨子，嗯，\\n\\n发起：你不要坐下，是不天天说明什么呀？\\n回应：就是每天\\n\\n发起：就说明这个猴子怎么样\\n回应：很细心，'},\n",
+       "  'sub3': {'d_number': [6, 7, 8],\n",
+       "   'sub_theme': '通过讲解和提问，帮助学生理解猴子种树的动作过程。',\n",
+       "   'sub_text': '讲解：还有呢，他每天都去浇，天天都去浇水，施肥说明他怎么样,英语非常勤劳，,这个猴子种树啊，它有一个动作的过程，\\n发起：你找到了动作的吗？它有哪些动作？\\n回应：浇水\\n\\n发起：天气就直接浇水了吗？\\n回应：[空白]\\n讲解：所以先说重好的，\\n\\n发起：然后呢，\\n回应：胶水\\n讲解：嗯浇，嗯，施肥，'}},\n",
+       " 'theme': {'theme': '通过对课文的朗读和提问，老师引导学生理解猴子的细心和勤劳，并帮助学生掌握猴子种树的具体动作过程，旨在培养学生的阅读理解能力和细节观察能力。'}}"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 300
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "2585fc64e3c39cd2"
   }
  ],
  "metadata": {
